--- a/simple/simple.vcxproj.filters
+++ b/simple/simple.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="binary-search-tests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="calculator_tests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
