Добавлены тесты телевизора, реализован функционал включения и выключения

--- a/simple/simple.vcxproj.filters
+++ b/simple/simple.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="calculator_tests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TVset-tests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
